# OmniQuant

./: .gitignore  GEMINI.md  README.md  docker-compose.yml  run_full_system.sh  start_all.sh  架构文档.md
backend_api/: requirements.txt
backend_api/app/: consumer.py  main.py  manager.py
core_router/: Cargo.toml  build.rs
core_router/src/: main.rs
demo_zmq/: README.md  pull_server.py  push_client.py  run_demo.sh
demo_zmq/cpp_push/: CMakeLists.txt
demo_zmq/cpp_push/src/: main.cpp
demo_zmq/rust_pull/: Cargo.toml  build.rs
demo_zmq/rust_pull/src/: main.rs
gateway_ctp/: CMakeLists.txt
gateway_ctp/ctp_sdk/: README.md
gateway_ctp/include/: CtpGateway.h  IGateway.h  MdHandler.h  TraderHandler.h
gateway_ctp/src/: CtpGateway.cpp  MdHandler.cpp  MdHandler.h  TraderHandler.cpp  TraderHandler.h  main.cpp
hft_eb/: CMakeLists.txt  GEMINI.md  build_release.sh  run.sh
hft_eb/docs/: position_design.md  risk_design.md  roadmap.md  strategy_tree_design.md
hft_eb/include/: framework.h
hft_eb/modules/ctp/: ctp_module.cpp
hft_eb/modules/ctp_real/: ctp_real_module.cpp
hft_eb/modules/monitor/: monitor_module.cpp
hft_eb/modules/replay/: replay_module.cpp
hft_eb/modules/strategy/: simple_strategy.cpp
hft_eb/src/: main.cpp
protocol/: omni.proto
protocol/scripts/: gen_protos.sh
web_dashboard/: index.html  package-lock.json  package.json
web_dashboard/src/: App.vue
